Upisi Se page -> Fix heights on mobile and desktop

--- a/assets/css/argon.css
+++ b/assets/css/argon.css
@@ -17477,7 +17477,7 @@ textarea[resize='horizontal']
 
 .section-profile-cover
 {
-    height: 580px;
+    height: 400px;
 
     background-position: center center; 
     background-size: cover;
@@ -17487,7 +17487,7 @@ textarea[resize='horizontal']
 {
     .section-profile-cover
     {
-        height: 400px;
+        height: 200px;
     }
 }
 
